Testing code example

--- a/solutions/monitoring_istio/index.asciidoc
+++ b/solutions/monitoring_istio/index.asciidoc
@@ -26,4 +26,15 @@ We are in an environment of docker, kubernetes, microservices and istio. The ide
 Assumed is a kubernernetes cluster with istio installed and running microservices. We will continuously show how you can monitor your cluster with the microservices using prometheus/grafana and how you can split the tasks into different namespaces. 
 The prerequisite is that there is a Kubernetes cluster with microservices and istio is already running on it.(In case istio isn't installed already: https://istio.io/latest/docs/setup/getting-started/#download)
 
+//Context and Scope
+
+//Solution Strategy
+(3) Shared: Configuration file vars-env-def-dev1.yaml
+```CMD
+# Create Namespaces
+  kubectl label namespace  application istio-injection=enabled
+  envNamePPE1SvcLevel: Full
+  envNamePPE1BranchName: dev
+  envNamePPE1KvEnvName: $(envNameCRST)1
+```
 
