Added Link to istioexample

--- a/solutions/monitoring_istio/index.asciidoc
+++ b/solutions/monitoring_istio/index.asciidoc
@@ -27,14 +27,21 @@ Assumed is a kubernernetes cluster with istio installed and running microservice
 The prerequisite is that there is a Kubernetes cluster with microservices and istio is already running on it.(In case istio isn't installed already: https://istio.io/latest/docs/setup/getting-started/#download)
 
 //Context and Scope
+//TODO
 
 //Solution Strategy
-(3) Shared: Configuration file vars-env-def-dev1.yaml
+The setup of the namespace istio-system is indirectly already done, because istio is already installed on our system and therefore the namespace is created automatically. The next namespace where we don't have to care much is the application namespace, there we only have to add all our microservices which run in our cluster. 
+Create Namespaces
 ```CMD
-  #Create Namespaces
   kubectl label namespace  application istio-injection=enabled
-  envNamePPE1SvcLevel: Full
-  envNamePPE1BranchName: dev
-  envNamePPE1KvEnvName: $(envNameCRST)1
+```
+The namespace with the monitoring will be a bit more complex, because we have to adjust the config files of Prometheus and Grafana. We have oriented ourselves as it can be seen in this https://istiobyexample.dev/prometheus/[example]
+(1) Grafana Monitoring Namespace
+```CMD
+  TODO
+```
+(2) Prometheus Monitoring Namespace
+```CMD
+  TODO
 ```
 
