--- a/solutions/monitoring_istio/index.asciidoc
+++ b/solutions/monitoring_istio/index.asciidoc
@@ -30,18 +30,18 @@ The prerequisite is that there is a Kubernetes cluster with microservices and is
 //TODO
 
 //Solution Strategy
-*The setup of the namespace istio-system is indirectly already done, because istio is already installed on our system and therefore the namespace is created automatically. The next namespace where we don't have to care much is the application namespace, there we only have to add all our microservices which run in our cluster. 
-Create Namespaces
+*The setup of the namespace *istio-system* is indirectly already done, because istio is already installed on our system and therefore the namespace is created automatically. The next namespace where we don't have to care much is the *application* namespace, there we only have to add all our microservices which run in our cluster.
+ Create Namespaces
 ```Kubernetes
   kubectl label namespace  application istio-injection=enabled
 ```
-The namespace with the monitoring will be a bit more complex, because we have to adjust the config files of Prometheus and Grafana. We have oriented ourselves as it can be seen in this https://istiobyexample.dev/prometheus/[example]
-(1) Grafana Monitoring Namespace
-```CMD
+The namespace with the *monitoring* will be a bit more complex, because we have to adjust the config files of Prometheus and Grafana. We have oriented ourselves as it can be seen in this https://istiobyexample.dev/prometheus/[example]
+ (1) Grafana Monitoring Namespace
+```YAML
   TODO
 ```
-(2) Prometheus Monitoring Namespace
-```CMD
+ (2) Prometheus Monitoring Namespace
+```YAML
   TODO
 ```
 
