--- a/solutions/monitoring_openTelemetry/howto-setup.asciidoc
+++ b/solutions/monitoring_openTelemetry/howto-setup.asciidoc
@@ -1,4 +1,4 @@
-== Steps to install Opentelemetry including Jaeger and grafana with your application.
+== Steps to install Opentelemetry including `Jaeger` and `grafana` with your application.
 
 1. Install `nginx` in the `azure` environment. Login to `azure` using the command shell and execute the below commands.
 
@@ -8,21 +8,21 @@ helm repo update
 helm install nginx-ingress bitnami/nginx-ingress-controller --set ingressClassResource.default=true --set containerSecurityContext.allowPrivilegeEscalation=false --namespace nginx-ingress --create-namespace
 ----
 
-2. Create two more services to get public ip/domain to configure grafana and jaeger. Use the below commands.
+2. Create two more services to get public ip/domain to configure `grafana` and `jaeger`. Use the below commands.
 ----
 kubectl apply -f ingress-grafana-service.yaml --namespace nginx-ingress
 kubectl apply -f ingress-jaeger-service.yaml  --namespace nginx-ingress
 ----
 
-3. Configure the subdomain names for the application, grafana & jaeger.
+3. Configure the subdomain names for the application, `grafana` & `jaeger`.
 Login to the azure console and open "Public IP addresses"
-Select each IP addresses having names like kubernetes-xxxx.
+Select each IP addresses having names like `kubernetes-xxxx`.
   Open configuration of each on of it and add the below names.
-    . applicaiton
-    . grafana
-    . jaeger
+    . `applicaiton`
+    . `grafana`
+    . `jaeger`
   
-4. Now open the vlaues.yaml file and add the hosts.
+4. Now open the `vlaues.yaml` file and add the hosts.
 
 Here is a sample configuration
 
@@ -44,7 +44,7 @@ Here is a sample configuration
     port: 8080
 ----
 
-5. Install helm chart.
+5. Install `helm chart`.
 
 ----
 helm install otlp ./helm --namespace nginx-ingress
