--- a/solutions/monitoring_openTelemetry/howto-setup.asciidoc
+++ b/solutions/monitoring_openTelemetry/howto-setup.asciidoc
@@ -7,13 +7,16 @@ helm repo add bitnami https://charts.bitnami.com/bitnami
 helm repo update
 helm install nginx-ingress bitnami/nginx-ingress-controller --set ingressClassResource.default=true --set containerSecurityContext.allowPrivilegeEscalation=false --namespace nginx-ingress --create-namespace
 ----
-
+[start=2]
 2. Create two more services to get public ip/domain to configure `grafana` and `jaeger`. Use the below commands.
 ----
 kubectl apply -f ingress-grafana-service.yaml --namespace nginx-ingress
 kubectl apply -f ingress-jaeger-service.yaml  --namespace nginx-ingress
 ----
 
+While executing the above commands and if any port already used issue, configure different port in `ingress-xxx-service.yaml`
+
+[start=3]
 3. Configure the subdomain names for the application, `grafana` & `jaeger`.
 Login to the azure console and open "Public IP addresses"
 Select each IP addresses having names like `kubernetes-xxxx`.
@@ -21,7 +24,8 @@ Select each IP addresses having names like `kubernetes-xxxx`.
     . `applicaiton`
     . `grafana`
     . `jaeger`
-  
+    
+[start=4]
 4. Now open the `vlaues.yaml` file and add the hosts.
 
 Here is a sample configuration
@@ -44,6 +48,7 @@ Here is a sample configuration
     port: 8080
 ----
 
+[start=5]
 5. Install `helm chart`.
 
 ----
